<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Ayuda">



    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_weight="40"
        android:paddingLeft="120dp"
        android:paddingTop="20dp"
        android:text="@string/ayuda"
        android:textSize="24sp"
        android:visibility="visible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:paddingBottom="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guia"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/button13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="30"
        android:onClick="abrirPanelPrincipal"
        android:text="@string/Volver" />

</LinearLayout>