<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Loterias">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="209dp"
        android:layout_height="46dp"
        android:layout_marginStart="124dp"
        android:layout_marginLeft="124dp"
        android:layout_marginTop="80dp"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/tituloL" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="164dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bonoloto" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="164dp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/euro" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="124dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/primitiva" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="124dp"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/quiniela" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="112dp"
        android:layout_height="29dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="40dp"
        android:text="@string/bono"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="125dp"
        android:layout_height="34dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:text="@string/euro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="109dp"
        android:layout_height="29dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="40dp"
        android:text="@string/primi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="106dp"
        android:layout_height="29dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:text="@string/quini"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:onClick="actionButton"
        android:text="@string/Aceptar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>